--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -4,10 +4,10 @@
 Given the constants, functions, relations, and axioms of a mathematical
 structure, what qualifies as a correct and complete computer implementation?
 
-For some familiar cases, the answer is obvious. Code implementing a group must
-have a type to represent the group elements, as well as a constant, a unary
+For some familiar cases, the answer is obvious. Code implementing a group would
+have a type representing the group elements, as well as a constant, a unary
 operator, and a binary operator, each satisfying appropriate axioms (the
-constant is the neutral element, the unary operator computes inverses, and that
+constant is the neutral element of the binary operator, the unary operator computes inverses, and
 the binary operator is associative).
 
 But for more interesting structures, especially those arising in
