--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -43,6 +43,7 @@
 
 % Realizaiblity
 \newcommand{\per}{\approx}
+\newcommand{\perty}[1]{\per_{\mathtt{#1}}}
 \newcommand{\rz}{\Vdash}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\values}[1]{[\![#1]\!]}
