--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -248,7 +248,7 @@ addition are implemented by
 %
 \begin{align*}
   &\clet{\mathtt{neg}\; k}{-(k \cmod 7)} \\
-  &\clet{\mathtt{add}\; k\; m}{(k \cmod 7) + (m \cmod 7)}
+  &\clet{\mathtt{add}\; (k, m)}{(k \cmod 7) + (m \cmod 7)}
 \end{align*}
 %
 The expected $\clet{\mathtt{neg}\; k}{-k}$ and $\clet{\mathtt{add}\;
@@ -298,6 +298,18 @@ point of view, because it removes dependencies at the level of types.
 Note also that there is no dependency on the realizers, only on the
 elements of the underlying set.
 
+A morphism $f : \family{A_i}{i \in I} \to \family{B_i}{i \in I}$ is a
+family $\family{f_i : \setOf{A_i} \to \setOf{B_i}}{i \in I}$ of
+uniformly realized maps, which means that there exists $u \in
+\values{\typeOf{I} \to \typeOf{A} \to \typeOf{B}}$ such that,
+%
+\begin{equation*}
+  v \rz_I i \land w \rz_{A_i} x \implies u\; v \; w \rz_{B_i} f_i(x)
+\end{equation*}
+%
+for all $i \in I$, $v \in \values{\typeOf{I}}$, $x \in \setOf{A_i}$,
+and $w \in \values{\typeOf{A}}$.
+
 We may form the \emph{sum} $\depsum{i \in I}{A_i}$ of a uniform family
 $\family{A_i}{i \in I}$ as
 %
@@ -335,9 +347,18 @@ These constructions allow us to interpret (extensional) dependent type
 theory in the category of modest sets.
 
 As an example of a uniform family we consider the cyclic group
-$(\ZZ_n, 0, {-}, {+})$ of order $n$. Essentially, we just replace~$7$
-by~$n$ everywhere in the above example:
-\internal{Chris}{Shouldn't the functions then take an extra $n$ parameter?}
+$(\ZZ_n, 0, {-}, {+})$ of order~$n$. To keep things simple, we assume
+that~$n$ ranges over natural numbers that can be represented by
+type~$\cint$. More precisely, let $N$ be the modest set
+%
+\begin{align*}
+  & \setOf{N} = \set{1, \ldots, 2^{30}} \\
+  & \typeOf{N} = \cint \\
+  & v \rz_N n \iff v = n.
+\end{align*}
+%
+The uniform family $\family{Z_n}{n \in N}$ is like the above example
+of the cyclic group of order~$7$, with $7$ replaced by~$n$:
 %
 \begin{align*}
   & \setOf{Z_n} = \ZZ_n = \set{0, 1, \ldots, n - 1}
@@ -346,20 +367,19 @@ by~$n$ everywhere in the above example:
   \\
   & v \rz_{Z_n} k \iff v \mathbin{\mathrm{mod}} n = k
   \\
-  & \clet{\mathtt{neg}\; k }{- (k \cmod n)}
+  & \clet{\mathtt{neg} \; n \; k }{- (k \cmod n)}
   \\
-  & \clet{\mathtt{add}\; k \; m}{k \cmod n + m \cmod n}.
+  & \clet{\mathtt{add} \; n \; (k,m)}{k \cmod n + m \cmod n}.
 \end{align*}
 %
-These definitions make sense for $n \geq 1$, but for too large a value
-of~$n$ overflow might occur. If we expect the implementation to be
-used with such values, it is more prudent to replace the type~$\cint$
-with an implementation of arbitrary size integers.
+Another change is the additional parameter~$n$ accepted by the
+realizers for negation and addition. The definitions make sense for
+any $n \in \setOf{N}$, but for too large a value overflow might occur.
+If we expect the implementation to be used with such values, it is
+more prudent to replace the type~$\cint$ with an implementation of
+arbitrary size integers.
 
-\internal{Andrej}{I have set up this example so that it looks ok, but
-  it actually incomplete because we have not specified the index
-  modest sets. Maybe we can use this later on. If not, I'll include
-  the definition of the index modest set.}
+\internal{Andrej}{I will polish this up when I see how the rest goes.}
 
 %%% Local Variables: 
 %%% mode: latex
