--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -13,82 +13,7 @@
 \usepackage{pdfsync}
 \fi
 
-%%%% MACROS %%%%%
-
-% Private comments, should be left in the source when the paper is finished.
-% Use this version for visible comments:
-\newcommand{\comment}[1]{\paragraph{Comment:} #1}
-% For invisible comments:
-%\newcommand{\comment}[1]{}
-
-% Internal notes, used during writing the paper. The first argument is
-% the author of the note. When the paper is finished, these should
-% all be gone. Delete an internal note as soon as you resolve it.
-\newcommand{\internal}[2]{\paragraph{Note by #1:} #2}
-
-% Types and terms in ocaml
-\newcommand{\ctype}{\mathtt{type}\;}
-\newcommand{\cint}{\mathtt{int}}
-\newcommand{\clist}[1]{#1\;\mathtt{list}}
-\newcommand{\ctrue}{\mathtt{true}}
-\newcommand{\cwhile}[2]{\mathtt{while}\;#1\;\mathtt{do}\;#2\;\mathtt{done}}
-\newcommand{\cstring}[1]{\mathtt{"#1"}}
-\newcommand{\cprint}[1]{\mathtt{print\_string}\;#1}
-\newcommand{\cfun}[2]{\mathtt{fun}\;#1 \to #2}
-\newcommand{\clet}[2]{\mathtt{let}\;#1 = #2}
-\newcommand{\cletrec}[2]{\mathtt{let}\;\mathtt{rec}\;#1 = #2}
-\newcommand{\cfst}[1]{\mathtt{fst}\;#1}
-\newcommand{\csnd}[1]{\mathtt{snd}\;#1}
-\newcommand{\cmod}{\mathbin{\mathtt{mod}}}
-
-% Realizaiblity
-\newcommand{\per}{\approx}
-\newcommand{\perty}[1]{\per_{\mathtt{#1}}}
-\newcommand{\rz}{\Vdash}
-\newcommand{\Type}{\mathsf{Type}}
-\newcommand{\values}[1]{[\![#1]\!]}
-\newcommand{\typeOf}[1]{|#1|}
-\newcommand{\setOf}[1]{\langle #1 \rangle}
-\newcommand{\support}[1]{\|#1\|}
-
-% Sets
-\newcommand{\set}[1]{\{#1\}}
-\newcommand{\such}{\mid}
-\newcommand{\pair}[1]{\langle #1 \rangle}
-
-\newcommand{\family}[2]{\set{#1}_{#2}}
-\newcommand{\depsum}[2]{{\Sigma_{#1} #2}}
-\newcommand{\depprod}[2]{{\Pi_{#1} #2}}
-
-% Common sets
-\newcommand{\NN}{\mathbb{N}}
-\newcommand{\ZZ}{\mathbb{Z}}
-\newcommand{\RR}{\mathbb{R}}
-
-% Theorem-like environments
-\iffalse
-{
-  \theorembodyfont{\itshape}
-  \newtheorem{theorem}{Theorem}[section]
-  \newtheorem{lemma}[theorem]{Lemma}
-  \newtheorem{proposition}[theorem]{Proposition}
-  \newtheorem{corollary}[theorem]{Corollary}
-}
-{
-  \theorembodyfont{\rmfamily}
-  \newtheorem{definition}[theorem]{Definition}
-  \newtheorem{example}[theorem]{Example}
-}
-\fi
-
-% Quantifiers. I am really used to these...
-\newcommand{\all}[3]{\forall\, #1 \,{\in}\, #2\,.\left(#3\right)}
-\newcommand{\some}[3]{\exists\, #1 \,{\in}\, #2\,.\left(#3\right)}
-\newcommand{\exactlyone}[3]{\exists!\, #1 \,{\in}\, #2\,.\left(#3\right)}
-\newcommand{\xall}[3]{\forall\, #1 \,{\in}\, #2\,.\,#3}
-\newcommand{\xsome}[3]{\exists\, #1 \,{\in}\, #2\,.\,#3}
-\newcommand{\xexactlyone}[3]{\exists!\, #1 \,{\in}\, #2\,.\,#3}
-
+\input{macros.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
